# mini-aladdin

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  check_libs.py  pyproject.toml  requirements.txt  setup_wrds.py  test_analyze.py  test_edge_cases.py  test_math.py  test_metadata.py  test_metadata_live.py  test_spy_wrds.py  test_wrds.py
backend/app/: ai_analyst.py  engine.py  main.py  market_data.py  models.py  storage.py
frontend/: Dockerfile  index.html  package-lock 2.json  package-lock.json  package.json  tailwind.config.js  test_jspdf.js  test_pdf.spec.js  test_pdf_fix.js  test_puppeteer.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AdvancedRiskMetrics.jsx  AssumptionsModal.jsx  BacktestChart.jsx  BlackLitterman.jsx  ChatInterface.jsx  CorrelationHeatmap.jsx  ExportButton.jsx  ExposureAnalytics.jsx  FactorAnalysis.jsx  Login.jsx  ManualAllocation.jsx  PerformanceAttribution.jsx  PortfolioManager.jsx  RelativePerformanceChart.jsx  StressTest.jsx  WealthProjection.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/utils/: ReportGenerator.js
